# pokereval-rs

./: Cargo.toml  README.md
benches/: lib.rs
src/: lib.rs  lookups.rs  original.rs  perfect.rs  types.rs  utils.rs
src/snip/: hash_values.snip
tests/: lib.rs
