[package]
name = "pokereval"
version = "0.1.0"
authors = ["Vladislav Supalov <v.supalov@gmail.com>"]
keywords = ["cards", "poker"]
description = "A Rust library for evaluating poker hands with 5 or 7 cards."
license = "MIT"
readme = "README.md"

[lib]
name = "pokereval"

[dependencies]
cards = "1.1.0"
holdem = "0.1.0"
