[package]
name = "pokereval"
version = "0.1.2"
authors = ["Vladislav Supalov <v.supalov@gmail.com>"]
keywords = ["cards", "poker"]
description = "A Rust library for evaluating poker hands with 5 or 7 cards."
homepage = "https://github.com/th4t/pokereval-rs"
license = "MIT"
readme = "README.md"

[lib]
name = "pokereval"

[dependencies]
cards = "1.1.2"
holdem = "0.1.2"
